# Rag_system_interview_may

./: skills-lock.json
artifacts/cross_system/run_20260316_004113/: baseline_eval_summary.json  comparison_report.json  comparison_report.md  langchain_eval_summary.json  run_config_snapshot.json
baseline_model/: .gitignore  README.md  config.json  pyproject.toml
baseline_model/src/baseline_model_app/: cli.py
implementation_plan/: reranker_revised_v1.md
implementation_plan/model_improve_tasks/: P0_plan_revised_v1.md  P0_plan_revised_v2.md  P1_plan.md  P3_plan.md
instructions/: config_explanation.md  eval_summary_explain.md
langchain_rag/: README.md  config.json  pyproject.toml
langchain_rag/src/langchain_rag_app/: cli.py  core.py
langchain_rag/src/langchain_rag_app/eval/: __init__.py  aggregator.py  llm_judge.py  metrics.py
langchain_rag/tests/: test_three_layer_eval.py
presentation/: presentation_outline.md  presentation_v1.md  presentation_v2.md  presentation_v3.md
rag_demo/api/FastAPI_implementation/: FastAPI_plan_v1.md  README.md
rag_demo/api/FastAPI_implementation/app/: main.py
rag_demo/api/FastAPI_implementation/app/api/v1/: rag.py
rag_demo/api/FastAPI_implementation/app/schemas/: rag.py
rag_demo/api/FastAPI_implementation/app/services/: rag_service.py
rag_demo/api/FastAPI_implementation/tests/: test_health.py  test_rag_api.py
rag_demo/web_demo/app/composables/: useRagApi.ts
