[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline-model"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pypdf>=6.8.0",
]

[project.scripts]
build = "baseline_model_app.cli:build"
eval = "baseline_model_app.cli:eval"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
